# Campfire

./: .gitignore  LICENSE  README.md
benchmark/messaging/: Cargo.toml
benchmark/messaging/src/: main.rs
benchmark/webrtc/server/: db.sqlite3
client/: .babelrc  .env  .eslintrc.js  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  webpack.config.js
client/public/: manifest.json
client/src/: App.tsx  Routes.tsx
client/src/styles/: BaseStyles.ts  FontStyles.css  NormalizeStyles.ts  index.ts
client/src/types/: index.ts
client/src/utils/: api.ts  browser.ts  token.ts  url.ts
mobile/: babel.config.js  package.json  tsconfig.json
mobile/Campfire/: app.json  babel.config.js  package.json  tsconfig.json
mobile/Campfire/android/: settings.gradle
mobile/Campfire/ios/: Podfile
mobile/Campfire/src/: App.tsx
mobile/ios/mobile/: Info.plist
mobile/ios/mobile.xcodeproj/: project.pbxproj
mobile/src/: App.js  App.tsx
mobile/src/components/: Typography.tsx
mobile/src/styles/: theme.ts
server/: .env  Cargo.toml
server/migrations/2020-10-10-221456_add_users/: up.sql
server/src/: constants.rs  main.rs
server/src/chat/: model.rs
server/src/user/: mod.rs  model.rs  route.rs
server/src/voice/: audio.rs  mod.rs
server/src/webrtc/: mod.rs  model.rs
web/: .eslintcache  .eslintrc  README.md  ci.yml  package.json
web/public/: index.html
web/src/: App.tsx  index.html  index.tsx
web/src/components/: Button.tsx  Header.tsx  Page.tsx
web/src/data/: index.ts
web/src/helpers/: utils.test.tsx  utils.tsx
(+52 files in other folders)
