[package]
name = "campfire-server"
version = "0.1.0"
authors = ["phooning <davidpham@utexas.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
actix-web-actors = "3.0.0"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
serde_json = "1.0.58"
