[package]
name = "campfire-server"
version = "0.1.0"
authors = ["phooning <davidpham@utexas.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.1.0"
actix-rt = "1.1.1"
actix-web-actors = "3.0.0"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
serde_json = "1.0.58"
serde = "1.0.116"
r2d2 = "0.8.9"
uuid = { version = "0.8.1", features = ["serde"] }
audiopus = "0.2.0"
